// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb has a separator prop that can be a custom component 1`] = `
<div
  className="ais-Breadcrumb"
>
  <ul
    className="ais-Breadcrumb-list"
  >
    <li
      className="ais-Breadcrumb-item"
    >
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
        <span>
          🔍
        </span>
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
        <span>
          🔍
        </span>
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white1
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
        <span>
          🔍
        </span>
      </span>
      white1.1
    </li>
  </ul>
</div>
`;

exports[`Breadcrumb has customizable translations 1`] = `
<div
  className="ais-Breadcrumb"
>
  <ul
    className="ais-Breadcrumb-list"
  >
    <li
      className="ais-Breadcrumb-item"
    >
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        ROOT_LABEL
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white1
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      white1.1
    </li>
  </ul>
</div>
`;

exports[`Breadcrumb outputs the default breadcrumb 1`] = `
<div
  className="ais-Breadcrumb"
>
  <ul
    className="ais-Breadcrumb-list"
  >
    <li
      className="ais-Breadcrumb-item"
    >
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white1
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      white1.1
    </li>
  </ul>
</div>
`;

exports[`Breadcrumb outputs the default breadcrumb with a custom className 1`] = `
<div
  className="ais-Breadcrumb MyCustomBreadcrumb"
>
  <ul
    className="ais-Breadcrumb-list"
  >
    <li
      className="ais-Breadcrumb-item"
    >
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white1
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      white1.1
    </li>
  </ul>
</div>
`;

exports[`Breadcrumb outputs the default breadcrumb with no refinement 1`] = `
<div
  className="ais-Breadcrumb ais-Breadcrumb--noRefinement"
>
  <ul
    className="ais-Breadcrumb-list"
  >
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      <a
        className="ais-Breadcrumb-link"
        href="#"
        onClick={[Function]}
      >
        white1
      </a>
    </li>
    <li
      className="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
    >
      <span
        className="ais-Breadcrumb-separator"
      >
         &gt; 
      </span>
      white1.1
    </li>
  </ul>
</div>
`;
